# pseudo-sntp

./: CMakeLists.txt  README.md  pseudo_sntp.pc.in
example/: client.cpp  server.cpp
include/pseudo_sntp/: sntp_client.hpp  sntp_defines.hpp  sntp_packet.hpp  sntp_server.hpp  sntp_timestamp.hpp
src/app/: client.cpp  server.cpp
src/pseudo_sntp/: endpoint.cpp  endpoint.hpp  resolve.cpp  resolve.hpp  sntp_client.cpp  sntp_packet.cpp  sntp_server.cpp  sntp_timestamp.cpp  udp_client.cpp  udp_client.hpp  udp_server.cpp  udp_server.hpp
